Add application version

--- a/UPOSS/Properties/Settings.settings
+++ b/UPOSS/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="CurrentUserRole" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CurrentApplicationVersion" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
