--- a/UPOSS/UPOSS.csproj
+++ b/UPOSS/UPOSS.csproj
@@ -5,8 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <AssemblyVersion>0.0.2.0</AssemblyVersion>
-    <FileVersion>0.0.2.0</FileVersion>
-    <Version>0.0.2</Version>
+    <FileVersion>0.0.3.0</FileVersion>
+    <Version>0.0.3</Version>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>UPOSS</Description>
   </PropertyGroup>
 
   <ItemGroup>
