--- a/UPOSS/UPOSS.csproj
+++ b/UPOSS/UPOSS.csproj
@@ -6,9 +6,9 @@
     <UseWPF>true</UseWPF>
     <NeutralLanguage>en</NeutralLanguage>
     <Description>UPOSS</Description>
-    <AssemblyVersion>1.0.14.0</AssemblyVersion>
-    <FileVersion>1.0.14.0</FileVersion>
-    <Version>1.0.14</Version>
+    <AssemblyVersion>1.0.15.0</AssemblyVersion>
+    <FileVersion>1.0.15.0</FileVersion>
+    <Version>1.0.15</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,6 +35,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Squirrel.Windows" Version="1.9.0" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
+    <PackageReference Include="ZXing.Net" Version="0.16.9" />
   </ItemGroup>
 
   <ItemGroup>
